--- a/src/Sheets/Row Template/RowComponent.module.css
+++ b/src/Sheets/Row Template/RowComponent.module.css
@@ -17,6 +17,7 @@
   left: 1em;
   border: 1px solid rgba(0, 0, 0, 0.04);
   will-change: transform, box-shadow;
+  background: rgba(245, 245, 247, 0.8);
 }
 
 .bodyRow.darkTheme {
