--- a/src/Settings/DataModels/DataModels.module.css
+++ b/src/Settings/DataModels/DataModels.module.css
@@ -205,8 +205,19 @@
   text-align: center;
   position: relative;
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+.headerTop {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  padding: 16px 24px;
 }
 
 .backButton {
